--- a/acc.html
+++ b/acc.html
@@ -3,63 +3,61 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="acc.css">
-		<title>クラスとインスタンス</title>
+		<title>よくある質問</title>
 	</head>
 	<body>
-		
+		<h1>よくある質問</h1>
 		<div class="accordion" id="js-faq">
 			<p class="accordion-trigger">
-				Q1.人生に疲れたんですが、どうしたらいいですか？
+				Q1.いつやるか？
 			</p>
 			<div class="accordion-contents">
-				A1.クソして寝ろ
+				A1.今でしょ。
 			</div>
 
 			<p class="accordion-trigger">
-				Q2.バナナはおやつに入りますか？
+				Q2.１、２、３、、、
 			</p>
 			<div class="accordion-contents">
-				A2.グレーです。
-				より安全に事を進めるのであれば、バナナはカットして弁当箱に入れ、キャベツやトマトなどの野菜も同時に入れておくのです。<br>
-				そうすれば、最悪「これはサラダです」という言い訳が成立します。（フルーツサラダ）
+				A2.ダー
 			</div>
 		</div>
-
-		<br><br><br>
 
 		<div class="accordion" id="js-accordion">
 			<p class="accordion-trigger">
-				Q1.人生に疲れたんですが、どうしたらいいですか？
+				Q3.javascriptがよくわかりません。
 			</p>
 			<div class="accordion-contents">
-				A1.クソして寝ろ
+				A3.
+				<a href="https://www.youtube.com/watch?v=ig3GosWuKF0&t=9253s">これ</a>
+				を見ましょう。
 			</div>
 
 			<p class="accordion-trigger">
-				Q2.バナナはおやつに入りますか？
+				Q4.CSSがわかりません。
 			</p>
 			<div class="accordion-contents">
-				A2.グレーです。
-				より安全に事を進めるのであれば、バナナはカットして弁当箱に入れ、キャベツやトマトなどの野菜も同時に入れておくのです。<br>
-				そうすれば、最悪「これはサラダです」という言い訳が成立します。（フルーツサラダ）
+				A4.
+				<a href="https://www.youtube.com/watch?v=Tu6pWncYy4U&t=659s">これ</a>
+				を見ましょう。
 			</div>
 		</div>
 
-		<br><br>
-
 		<dl class="accordion" id="js-accordion-mini">
 			<p class="accordion-trigger">
-				Q1.人生に疲れたんですが、どうしたらいいですか？
+				Q5.HTMLがわかりません。
 			</p>
 			<div class="accordion-contents">
-				A1.クソして寝ろ
+				A5.
+				<a href="https://www.youtube.com/watch?v=IR_srJ2zL3o">これ</a>
+				を見ましょう。
 			</div>
 
 			<p class="accordion-trigger">
-				Q2.バナナはおやつに入りますか？
+				Q6.バナナはおやつに入りますか？
 			</p>
 			<div class="accordion-contents">
-				A2.グレーです。
+				A6.グレーです。
 				より安全に事を進めるのであれば、バナナはカットして弁当箱に入れ、キャベツやトマトなどの野菜も同時に入れておくのです。<br>
 				そうすれば、最悪「これはサラダです」という言い訳が成立します。（フルーツサラダ）
 			</div>
